@@ -23,9 +23,7 @@ import org.elasticsearch.repositories.RepositoriesService;
 import org.elasticsearch.script.ScriptService;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.watcher.ResourceWatcherService;
-import org.elasticsearch.xpack.ingest.geoip.GeoIpDownloader;
-import org.elasticsearch.xpack.ingest.geoip.GeoIpMetadata;
-import org.elasticsearch.xpack.ingest.geoip.HttpClient;
+
 
 import java.time.Clock;
 import java.util.Collection;
@@ -52,26 +50,26 @@ public class IngestPlugin extends Plugin implements org.elasticsearch.plugins.In
         );
     }
 
-    @Override
-    public List<NamedWriteableRegistry.Entry> getNamedWriteables() {
-        return List.of(
-            new NamedWriteableRegistry.Entry(Metadata.Custom.class, GeoIpMetadata.TYPE, GeoIpMetadata::new),
-            new NamedWriteableRegistry.Entry(NamedDiff.class, GeoIpMetadata.TYPE, GeoIpMetadata.GeoIpMetadataMetadataDiff::new));
-    }
-
-    @Override
-    public List<Setting<?>> getSettings() {
-        return List.of(GeoIpDownloader.ENDPOINT_SETTING, GeoIpDownloader.POLL_INTERVAL_SETTING);
-    }
-
-    @Override
-    public Collection<Object> createComponents(Client client, ClusterService clusterService, ThreadPool threadPool,
-                                               ResourceWatcherService resourceWatcherService, ScriptService scriptService,
-                                               NamedXContentRegistry xContentRegistry, Environment environment,
-                                               NodeEnvironment nodeEnvironment, NamedWriteableRegistry namedWriteableRegistry,
-                                               IndexNameExpressionResolver indexNameExpressionResolver,
-                                               Supplier<RepositoriesService> repositoriesServiceSupplier) {
-        new GeoIpDownloader(settings, client, new HttpClient(), clusterService, Clock.systemDefaultZone());
-        return Collections.emptyList();
-    }
+//    @Override
+//    public List<NamedWriteableRegistry.Entry> getNamedWriteables() {
+//        return List.of(
+//            new NamedWriteableRegistry.Entry(Metadata.Custom.class, GeoIpMetadata.TYPE, GeoIpMetadata::new),
+//            new NamedWriteableRegistry.Entry(NamedDiff.class, GeoIpMetadata.TYPE, GeoIpMetadata.GeoIpMetadataMetadataDiff::new));
+//    }
+//
+//    @Override
+//    public List<Setting<?>> getSettings() {
+//        return List.of(GeoIpDownloader.ENDPOINT_SETTING, GeoIpDownloader.POLL_INTERVAL_SETTING);
+//    }
+//
+//    @Override
+//    public Collection<Object> createComponents(Client client, ClusterService clusterService, ThreadPool threadPool,
+//                                               ResourceWatcherService resourceWatcherService, ScriptService scriptService,
+//                                               NamedXContentRegistry xContentRegistry, Environment environment,
+//                                               NodeEnvironment nodeEnvironment, NamedWriteableRegistry namedWriteableRegistry,
+//                                               IndexNameExpressionResolver indexNameExpressionResolver,
+//                                               Supplier<RepositoriesService> repositoriesServiceSupplier) {
+//        new GeoIpDownloader(settings, client, new HttpClient(), clusterService, Clock.systemDefaultZone());
+//        return Collections.emptyList();
+//    }
 }
